# adjustablewidget

./: README.md  __init__.py  adjustableWidget.py  examples.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
adjustableWidget/: __init__.py  adjustable_widget.py
examples/: generic.py  image.py  img_widget.py
imageWidget/: __init__.py  image_widget.py
img_widgets/: __init__.py  img_widget.py
